Added card symbol images to 'assets' folder. Created layout for README file.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Memorise | Puzzle Game</title>
+    <!-- style.css -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Memory</h1>
+    <h1>Memorise</h1>
+    <img src="assets/club.png">
+    <img src="assets/diamond.png">
+    <img src="assets/heart.png">
+    <img src="assets/spade.png">
+    <br><br>
+    <img src="assets/club.png">
+    <img src="assets/diamond.png">
+    <img src="assets/heart.png">
+    <img src="assets/spade.png">
+    <br><br>
+    <img src="assets/club.png">
+    <img src="assets/diamond.png">
+    <img src="assets/heart.png">
+    <img src="assets/spade.png">
+    <br><br>
+    <img src="assets/club.png">
+    <img src="assets/diamond.png">
+    <img src="assets/heart.png">
+    <img src="assets/spade.png">
 </body>
 </html>
