Added new images to 'assets' folder including wireframes Created basic layout for the card grid

--- a/index.html
+++ b/index.html
@@ -1,32 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memorise | Puzzle Game</title>
-    <!-- style.css -->
+    <!-- Link to style.css file -->
     <link rel="stylesheet" href="style.css">
+    <!-- Link to JavaScript file -->
+    <script src="index.js"></script>
 </head>
+
 <body>
-    <h1>Memorise</h1>
-    <img src="assets/club.png">
-    <img src="assets/diamond.png">
-    <img src="assets/heart.png">
-    <img src="assets/spade.png">
-    <br><br>
-    <img src="assets/club.png">
-    <img src="assets/diamond.png">
-    <img src="assets/heart.png">
-    <img src="assets/spade.png">
-    <br><br>
-    <img src="assets/club.png">
-    <img src="assets/diamond.png">
-    <img src="assets/heart.png">
-    <img src="assets/spade.png">
-    <br><br>
-    <img src="assets/club.png">
-    <img src="assets/diamond.png">
-    <img src="assets/heart.png">
-    <img src="assets/spade.png">
+    <div class="cardgrid">
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+        <div class="card">
+            <img class="back" src="assets/back-of-card.png" alt="Back of card">
+            <img class="front" src="assets/club.png" alt="Club">
+        </div>
+    </div>
+
+    <div class="modal">
+        <h2>Congratulations! You have matched all of the cards!</h2>
+        <button>Reset</button>
+    </div>
 </body>
+
 </html>
