--- a/index.html
+++ b/index.html
@@ -8,80 +8,66 @@
     <!-- Link to style.css file -->
     <link rel="stylesheet" href="style.css">
     <!-- Link to JavaScript file -->
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </head>
 
 <body>
-    <div class="cardgrid">
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
-        </div>
-        <div class="card">
-            <img class="back" src="assets/back-of-card.png" alt="Back of card">
-            <img class="front" src="assets/club.png" alt="Club">
+    <div class="header">
+        <h1>Memorise - a puzzle memory Game</h1>
+        <div class="score">
+            Score: <span>0</span>
         </div>
     </div>
 
-    <div class="modal">
-        <h2>Congratulations! You have matched all of the cards!</h2>
-        <button>Reset</button>
+    <div class="container">
+        <div class="cell">
+            <div class="front" data-index="1"><img src="assets/club.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="1"><img src="assets/diamond.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="2"><img src="assets/heart.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="2"><img src="assets/question-mark-sign-icon.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="3"><img src="assets/spade.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="3"><img src="assets/diamond.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="4"><img src="assets/heart.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="4"><img src="assets/club.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="5"><img src="assets/question-mark-sign-icon.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="5"><img src="assets/spade.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="6"><img src="assets/heart.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="6"><img src="assets/diamond.png" alt="Club"></div>
+            <div class="back"></div>
+        </div>
     </div>
 </body>
 
