Added styling to description in 'style.css' Added new card 'exclamation' Finished score increasing function in 'index.js'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="header">
-        <h1>Memorise - a puzzle memory Game</h1>
+        <h1>Memorise</h1>
         <div class="score">
             Score: <span>0</span>
         </div>
@@ -25,50 +25,60 @@
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="1"><img src="assets/diamond.png" alt="Club"></div>
+            <div class="front" data-index="2"><img src="assets/diamond.png" alt="Diamond"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="2"><img src="assets/heart.png" alt="Club"></div>
+            <div class="front" data-index="3"><img src="assets/heart.png" alt="Heart"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="2"><img src="assets/question-mark-sign-icon.png" alt="Club"></div>
+            <div class="front" data-index="5"><img src="assets/question-mark-sign-icon.png" alt="Question Mark"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="3"><img src="assets/spade.png" alt="Club"></div>
+            <div class="front" data-index="4"><img src="assets/spade.png" alt="Spade"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="3"><img src="assets/diamond.png" alt="Club"></div>
+            <div class="front" data-index="2"><img src="assets/diamond.png" alt="Diamond"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="4"><img src="assets/heart.png" alt="Club"></div>
+            <div class="front" data-index="6"><img src="assets/exclamation.jpg" alt="Exclamation Mark"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="4"><img src="assets/club.png" alt="Club"></div>
+            <div class="front" data-index="1"><img src="assets/club.png" alt="Club"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="5"><img src="assets/question-mark-sign-icon.png" alt="Club"></div>
+            <div class="front" data-index="5"><img src="assets/question-mark-sign-icon.png" alt="Question Mark"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="5"><img src="assets/spade.png" alt="Club"></div>
+            <div class="front" data-index="4"><img src="assets/spade.png" alt="Spade"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="6"><img src="assets/heart.png" alt="Club"></div>
+            <div class="front" data-index="3"><img src="assets/heart.png" alt="Heart"></div>
             <div class="back"></div>
         </div>
         <div class="cell">
-            <div class="front" data-index="6"><img src="assets/diamond.png" alt="Club"></div>
+            <div class="front" data-index="6"><img src="assets/exclamation.jpg" alt="Exclamation Mark"></div>
             <div class="back"></div>
         </div>
     </div>
+    <p>Welcome to Memorise, a simple memory matching puzzle game.
+        <br><br>
+        The game is simple. You will have 3 seconds to memorise the card symbols shown on screen, after which they will turn over.
+        <br><br>
+        There are 5 different symbols: Club, Diamond, Exclamation, Heart, Question and Spade.
+        <br><br>
+        Your goal is to match each card with its pair - that is if you can remember! Each correct pair will increase your score by 1 up to a total of 6.
+        <br><br>
+        Good Luck!
+    </p>
 </body>
 
 </html>
