Added images to 'assets' for 'README.md' testing section Formatted 'README.md' file with images and links

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
+    <!-- Heading Box & Score Counter -->
     <div class="header">
         <h1>Memorise</h1>
         <div class="score">
             Score: <span>0</span>
         </div>
     </div>
-
+    <!-- Game Board Container -->
     <div class="container">
         <div class="cell">
             <div class="front" data-index="1"><img src="assets/club.png" alt="Club"></div>
@@ -69,6 +70,7 @@
             <div class="back"></div>
         </div>
     </div>
+    <!-- Description Box -->
     <p>Welcome to Memorise, a simple memory matching puzzle game.
         <br><br>
         The game is simple. You will have 3 seconds to memorise the card symbols shown on screen, after which they will turn over.
